# ene-kafka

./: .gitignore  .tool-versions  Cargo.toml  readme.md
.github/: dependabot.yml
.github/actions/setup-builder/: action.yaml
.github/workflows/: rust.yml
docs/: consumer_architecture.md
ene_kafka/: Cargo.toml
ene_kafka/src/: lib.rs
ene_kafka/src/admins/: mod.rs  rdkafka_impl.rs
ene_kafka/src/consumers/: consumer.rs  mod.rs  rdkafka_impl.rs
ene_kafka/src/dispatchers/: mod.rs
ene_kafka/src/handlers/: mod.rs
ene_kafka/src/messages/: kafka_message.rs  mod.rs  rdkafka_impl.rs
ene_kafka/src/messages/cloud_events/: cloud_event.rs  mod.rs
ene_kafka/src/producers/: mod.rs  producer.rs  rdkafka_impl.rs
ene_kafka_derive/: Cargo.toml
ene_kafka_derive/src/: cloud_event.rs  deserialize_from.rs  handler.rs  kafka_message.rs  lib.rs
ene_kafka_examples/: Cargo.toml  events_custom_serde.rs  kafka_admin.rs  kafka_consumer.rs  kafka_producer.rs
examples/: consumer.rs  main.rs  producer.rs
tests/: Cargo.toml
tests/examples/: admin.rs
