[workspace]
members = [
    "ene_kafka",
    "ene_kafka_derive",
    "ene_kafka_examples",
]
resolver = "2"

[workspace.package]
authors = ["Abdullah Sabaa Allil"]
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
rust-version = "1.70"
version = "0.1.2"
keywords = ["kafka", "microservices", "ene-rs", "ene-kafka", "pubsub"]
description = "Ene Kafka is an easy-to-use Rust client for Apache Kafka"
repository = "https://github.com/ene-rs/ene-kafka"

[workspace.dependencies]
anyhow = "1.0.86"
async-trait = "0.1.82"
chrono = "0.4.38"
rdkafka = "0.36.2"
serde = "1.0.209"
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros"] }
uuid = {version = "1.10.0", features = ["v4"]}
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt", "json"] }
deluxe = "0.5.0"
proc-macro2 = "1.0.86"
quote = "1.0.37"
syn = "2.0.77"
ene_kafka = { path = "ene_kafka" }
ene_kafka_derive = { path = "ene_kafka_derive" }


[workspace.lints.rust]
unused_imports = "deny"

[profile.release]
codegen-units = 1
lto = true