[package]
name = "ene_kafka"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true }
description = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = {workspace = true}
async-trait = {workspace = true}
chrono = {workspace = true}
rdkafka = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
tokio = {workspace = true}
uuid = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}

[features]
default = ["rdkafka"]
rdkafka = []