[package]
name = "ene_kafka_examples"
description = "Ene Kafka usage examples"
keywords = ["kafka"]
publish = false
readme = "README.md"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }

[lints]
workspace = true

[[example]]
name = "kafka_admin"
path = "kafka_admin.rs"

[[example]]
name = "kafka_consumer"
path = "kafka_consumer.rs"

[[example]]
name = "kafka_producer"
path = "kafka_producer.rs"

[[example]]
name = "events_custom_serde"
path = "events_custom_serde.rs"

[dev-dependencies]
ene_kafka = { workspace = true }
ene_kafka_derive = { workspace = true }
tokio = {workspace = true}
tracing-subscriber = {workspace = true}
serde = {workspace = true}
anyhow = {workspace = true}
serde_json = {workspace = true}
uuid = {workspace = true}
chrono = {workspace = true}
async-trait = {workspace = true}