[package]
name = "tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
chrono = "0.4.33"
ene_kafka = { path = "../ene_kafka" }
ene_kafka_derive = { path = "../ene_kafka_derive" }
serde = "1.0.195"
serde_json = "1.0.111"
tokio = "1.35.1"
uuid = { version = "1.7.0", features = ["serde", "v4"] }
axum = {version = "0.7.5" }
async-trait = { version = "0.1.77", features = [] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "fmt", "json"] }
